--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jie203156/szhmqd_node#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "captchapng": "^0.0.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.4"
   }
