--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "captchapng": "^0.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongodb": "^3.1.4"
   }
 }
